One more rename of reason_for_not_participating.
I missed this in 728e0454d453a7e13891cf702b98552bf521d363.

--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -155,7 +155,7 @@ Past community participation in Outreachy
 
 	{% if participation_info.approval_status == participation_info.WITHDRAWN %}
 		<p>The coordinator has indicated that they will not be participating in this Outreachy internship round:</p>
-		<p>"{{ participation_info.reason_for_not_participating }}"</p>
+		<p>"{{ participation_info.reason_denied }}"</p>
 
 	{% else %}
 		{% if participation_info.approval_status == participation_info.REJECTED %}
