Be consistent about button color.
Partially implements #78

--- a/home/templates/home/community_form.html
+++ b/home/templates/home/community_form.html
@@ -7,7 +7,7 @@
     {% csrf_token %}
     {{ form.media }}
     {{ form.as_p }}
-    <input class="btn btn-primary" type="submit" value="Save community info" />
+    <input class="btn btn-success" type="submit" value="Save community info" />
 </form>
 
 {% endblock %}
