--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -56,7 +56,7 @@ Past community participation in Outreachy
 
 	<p>Please read the additional <a href="/mentor/mentor-faq/#define-a-project">Outreachy project requirements</a> before submitting an intern project proposal.</p>
 
-	<p><a class='btn btn-primary' href="{% url 'project-action' action='submit' community_slug=community.slug %}">Submit a Project Proposal</a></p>
+	<p><a class='btn btn-success' href="{% url 'project-action' action='submit' community_slug=community.slug %}">Submit a Project Proposal</a></p>
 
 	{% if approved_projects %}
 		<h2>Approved Intern Project Proposals</h2>
