--- a/home/templates/home/preview/coordinatorapproval_action.html
+++ b/home/templates/home/preview/coordinatorapproval_action.html
@@ -29,6 +29,7 @@
 <form action="" method="post">
 	{% csrf_token %}
 	{{ form.as_p }}
+	{% comment %}@jameysharp - FIXME - this should be different colors for the different actions.{% endcomment %}
 	<input type="submit" class="btn btn-primary" value="{{ view.kwargs.action|title }}" />
 </form>
 
