--- a/home/templates/home/preview/project_action.html
+++ b/home/templates/home/preview/project_action.html
@@ -21,6 +21,7 @@
     {% csrf_token %}
     {{ form.media }}
     {{ form.as_p }}
+    {% comment %}@jameysharp - FIXME - this should be different colors for the different actions.{% endcomment %}
     <input class="btn btn-primary" type="submit" value="{{ view.kwargs.action|title }} project" />
 </form>
 
