--- a/home/templates/registration/activate.html
+++ b/home/templates/registration/activate.html
@@ -18,7 +18,7 @@ Activation failed
         This could happen if you already activated your account. In that
         case, you can log in now.
         </p>
-        <a href="{% url 'login' %}" class="btn btn-primary">Log in</a>
+        <a href="{% url 'login' %}" class="btn btn-success">Log in</a>
     </div>
 </div>
 {% endblock %}
