--- a/home/templates/home/snippet/mentor_info.html
+++ b/home/templates/home/snippet/mentor_info.html
@@ -12,7 +12,7 @@
 <ol>
 	<li><p>Has the mentor participated in Outreachy before?</p><p><b>{{ approval.get_mentored_before_display }}</b></p></li>
 	<li><p>What is the contributor's mentorship style (how do they expect to interact with accepted interns)?</p><p><b>{{ approval.mentorship_style }}</b></p></li>
-	<li><p>How long has the mentor been a contributor to the team that the intern will be working with (e.g. the team of contributors for a particular subsystem, application, module, documentation team, user experince team, graphical design team, etc)?</p><p><b>This person has contributed to this team for {{ approval.get_longevity_display }}</p></b></li>
+	<li><p>How long has the mentor been a contributor to the team that the intern will be working with (e.g. the team of contributors for a particular subsystem, application, module, documentation team, user experince team, graphical design team, etc)?</p><p><b>This person has contributed to this team for {{ approval.get_longevity_display|lower }}</p></b></li>
 	<li><p>What contributions has this mentor made to the team or other FOSS communities?</p><p><b>{{ approval.mentor_foss_contributions }}</b></p></li>
 </ol>
 <h2>Mentor Contact Information</h2>
