Add Outreachy organizer contact info to community CFP page

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -8,6 +8,8 @@ Call for Outreachy community coordinators, mentors, and volunteers
 <h1>Call for Outreachy Community Participation</h1>
 <p>Outreachy provides three-month internships for people from <a href="/apply/eligibility/">groups traditionally underrepresented in tech</a>. Internships run twice a year.</p>
 
+<p>If you have any questions about Outreachy, you can <a href="/contact/">contact Outreachy organizers or the mentors mailing list</a>.
+
 <h2>Terms used</h2>
 {% include "home/snippet/foss-terms.html" %}
 
