Add information from removed page.
The only thing left on the wagtail community FAQ page was that
communities need to secure funding for at least one intern. Add that
information back into the template.

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -22,9 +22,11 @@ Call for Outreachy community coordinators, mentors, and volunteers
 <h2>Who can participate?</h2>
 <p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators, mentors, and volunteers.</p>
 
-<p>Communities participating in Outreachy must further the mission of Free and Open Source Software (FOSS), not proprietary software. FOSS communities also need to meet additional requirements.<p>
+<p>Communities participating in Outreachy must further the mission of Free and Open Source Software (FOSS), not proprietary software.<p>
 
 {% include "home/snippet/license-requirements.html" %}
+
+<p>FOSS communities also need to have secured funding for at least one intern ($6,500). That covers the $5,500 intern stipend, the $500 intern travel stipend, and a $500 accounting fee for Outreachy's fiscal non-profit parent organization, Software Freedom Conservancy, to handle sponsor invoicing, intern payments, and more.</p>
 
 <h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
 {% include "home/snippet/mentor-timeline.html" %}
