--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -22,11 +22,16 @@ Call for Outreachy community coordinators, mentors, and volunteers
 <h2>Who can participate?</h2>
 <p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators, mentors, and volunteers.</p>
 
-<p>Communities participating in Outreachy must further the mission of Free and Open Source Software (FOSS), not proprietary software.<p>
+<p><u>Funding Requirements</u></p>
+<p>FOSS communities need to have secured funding for at least one intern ($6,500). That covers the $5,500 internship stipend, the $500 intern travel stipend, and a $500 accounting fee. The accounting fee covers Outreachy's fiscal non-profit parent organization, Software Freedom Conservancy, handle sponsor invoicing, intern payments, W-9 collection, visa request letters, employment verification letters, student internship credit letters, and tax questions.</p>
 
+<p><u>Licensing Requirements</u></p>
 {% include "home/snippet/license-requirements.html" %}
 
-<p>FOSS communities also need to have secured funding for at least one intern ($6,500). That covers the $5,500 intern stipend, the $500 intern travel stipend, and a $500 accounting fee for Outreachy's fiscal non-profit parent organization, Software Freedom Conservancy, to handle sponsor invoicing, intern payments, and more.</p>
+<p><u>Community Requirements</u></p>
+<p>Outreachy interns benefit from working with a variety of community members who can help review their work and answer questions. This means FOSS communities in Outreachy need to be well-established communities, with core team members (either paid or volunteer) who regularly contribute to the community.</p>
+
+<p>Core team members, additional community contributors, and FOSS community governance members should come from a variety of different organizations, in order to ensure that one organization does not dominate the community contributions and governance of the FOSS community.</p>
 
 <h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
 {% include "home/snippet/mentor-timeline.html" %}
