--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -131,14 +131,12 @@
 {% if mentor_request|is_submitter:request.user %}
 	<p>Does your mentor information (e.g. your mentorship style and mentor experience) look correct? If not, you can edit it.</p>
 	<p><a class="btn btn-primary" href="{{ mentor_request.get_submit_url }}">Edit Mentor Info</a></p>
-{% endif %}
 
-{% if mentor_request|is_submitter:request.user %}
 	<p>Does your person information (e.g. your public name, pronouns, or timezone) look correct? If not, you can edit it.</p>
 	<p><a class="btn btn-primary" href="{% url 'account' %}">Edit Personal Info</a></p>
 {% endif %}
 
-{% if coordinator or mentor_request and mentor_request.approval_status == mentor_request.APPROVED %}
+{% if user.is_staff or coordinator or mentor_request and mentor_request.approval_status == mentor_request.APPROVED %}
 	<div class="card">
 		<div class="card-header">Preview - Project Proposal Information Shown to Applicants</div>
 		<div class="card-body">
