Change approval action button colors.
Fixes #78.

--- a/home/templates/home/preview/mentorapproval_action.html
+++ b/home/templates/home/preview/mentorapproval_action.html
@@ -27,13 +27,7 @@
 	{% include "home/snippet/mentor_info.html" with approval=mentorapproval only %}
 {% endif %}
 
-<form action="" method="post">
-	{% csrf_token %}
-	{{ form.media }}
-	{{ form.as_p }}
-	{% comment %}@jameysharp - FIXME - this should be different colors for the different actions.{% endcomment %}
-	<input type="submit" class="btn btn-primary" value="{{ view.kwargs.action|title }}" />
-</form>
+{% include "home/snippet/action_form.html" %}
 
 {% endwith %}
 {% endblock %}
