Set better title for eligibility form.

--- a/home/templates/home/wizard_form.html
+++ b/home/templates/home/wizard_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-Wizard
+Are you eligible to apply to Outreachy?
 {% endblock %}
 
 {% block content %}
