--- a/home/templates/home/eligibility_wizard_time_commitment_info.html
+++ b/home/templates/home/eligibility_wizard_time_commitment_info.html
@@ -21,8 +21,10 @@ If you have less than three time commitments, leave additional ones blank.
 {% if wizard.form.forms %}
     {{ wizard.form.management_form }}
     {% for form in wizard.form.forms %}
+	<div class="card border-info mb-3">
+		<div class="card-header text-white bg-info">Time Commitment Info #{{ forloop.counter }}</div>
+	</div>
         {% include "bootstrap_form.html" with form=form only %}
-	<hr>
     {% endfor %}
 {% else %}
     {% include "bootstrap_form.html" with form=wizard.form only %}
